# toys

./: README.md
dbus/: Makefile  README.md  read_prop.c  read_prop.sh
docker/python-test/: Dockerfile  app.py  run.sh
gdb/: attach_pidof.gdb
gdb/change_mem/: a.c  patch_ret.gdb  run.sh
gdb/crashes/: Makefile  fpe.c
gdb/python_ext/: attach_pidof.py
meson/boost_python/: meson.build  run.sh  test.cpp  test.py
meson/proj_with_subs/: meson.build
meson/proj_with_subs/subs/mysub1/: meson.build  meson_options.txt
meson/proj_with_subs/subs/mysub2/: meson.build
python/: faulthandler.sh  thread_rlock.py
system_sigterm/: test.c  test_loop.sh  test_ok.sh  test_sleep.sh
vagrant/memory/: Vagrantfile
